fixed grid item alignment

--- a/styles/Repocard.module.css
+++ b/styles/Repocard.module.css
@@ -9,7 +9,6 @@
 
 .link {
   cursor: pointer;
-  color: #0969da;
 }
 
 .chip {
